--- a/ns_panel.yaml
+++ b/ns_panel.yaml
@@ -4,6 +4,7 @@ packages:
   wifi: github://enoyau/esphome/wifi.yaml@main
   bt_tracker: github://enoyau/esphome/bt_tracker.yaml@main
   ns_panel_bare: github://enoyau/esphome/ns_panel_bare.yaml@main
+  uptime: github://enoyau/esphome/uptime.yaml@main
 
 
 # Playing buzzer music
