--- a/ns_panel_bare.yaml
+++ b/ns_panel_bare.yaml
@@ -1,8 +1,15 @@
-## Requires ${device_name}, ${wifi_ssid}, ${wifi_password}, {api_password} and ${ota_password}
-## to be set.
-## Also requires
-## * ${uart_speed}, which should match the one in the hmi/tft file.
-## * ${tft_url}, where the tft file can be downloaded from.
+## Configures a barebone Sonoff NSPanel
+##
+## Requires the following substitutions to be set:
+##
+## • ${device_name}
+## • ${wifi_ssid}
+## • ${wifi_password}
+## • {api_password}
+## • ${ota_password}
+## • ${uart_speed}, which should match the one in the hmi/tft file.
+## • ${tft_url}, where the tft file can be downloaded from.
+##
 
 packages:
   common: github://e-noyau/esphome/common_esp32dev.yaml@main
@@ -16,9 +23,15 @@ external_components:
     components: [nextion]
     refresh: 1h
 
+api:
+  - service: upload_tft
+    then:
+      - lambda: 'id(nextion_display)->upload_tft();'
+
 binary_sensor:
   # The left physical button
   - platform: gpio
+    id: left_button
     name: "${device_name} left button"
     pin:
       number: 14
@@ -29,6 +42,7 @@ binary_sensor:
 
   # The right physical button
   - platform: gpio
+    id: right_button
     name: "${device_name} right button"
     pin:
       number: 27
@@ -47,16 +61,16 @@ output:
 switch:
   # First relay
   - platform: gpio
-    name: ${device_name} relay 1
     id: relay_1
+    name: ${device_name} relay 1
     pin:
       number: 22
     icon: mdi:electric-switch
 
   # Second relay
   - platform: gpio
-    name: ${device_name} relay 2
     id: relay_2
+    name: ${device_name} relay 2
     pin:
       number: 19
     icon: mdi:electric-switch
@@ -64,8 +78,8 @@ switch:
   # Turn screen power on/off. Easy way to configure the screen power control, but this should not
   # be used from HA, as all components must be re-initialized afterwards.
   - platform: gpio
-    name: ${device_name} screen power
     id: screen_power
+    name: ${device_name} screen power
     entity_category: config
     pin:
       number: 4
@@ -108,6 +122,6 @@ uart:
 
 display:
   - platform: nextion
-    id: disp1
+    id: nextion_display
     uart_id: tf_uart
     tft_url: ${tft_url}
