--- a/ns_panel.yaml
+++ b/ns_panel.yaml
@@ -12,3 +12,25 @@ rtttl:
   id: buzzer
   output: buzzer_out
 
+binary_sensor:
+  # The left physical button
+  - platform: gpio
+    id: left_button
+    name: "${device_name} left button"
+    pin:
+      number: 14
+      inverted: true
+    icon: mdi:light-switch
+    on_press:
+      - switch.toggle: relay_1
+
+  # The right physical button
+  - platform: gpio
+    id: right_button
+    name: "${device_name} right button"
+    pin:
+      number: 27
+      inverted: true
+    icon: mdi:light-switch
+    on_press:
+      - switch.toggle: relay_2
