--- a/ns_panel_uploader.yaml
+++ b/ns_panel_uploader.yaml
@@ -5,17 +5,23 @@ binary_sensor:
   # The left physical button
   - platform: gpio
     id: left_button
+    name: "${device_name} left button"
     pin:
       number: 14
       inverted: true
+    icon: mdi:light-switch
     on_press:
+      - switch.toggle: relay_1
       - lambda: 'id(nextion_display)->upload_tft();'
 
   # The right physical button
   - platform: gpio
     id: right_button
+    name: "${device_name} right button"
     pin:
       number: 27
       inverted: true
+    icon: mdi:light-switch
     on_press:
+      - switch.toggle: relay_2
       - lambda: 'id(nextion_display)->upload_tft();'
