--- a/logger.yaml
+++ b/logger.yaml
@@ -1,5 +1,4 @@
 logger:
-  baud_rate: 0
   level: DEBUG
   logs:
     sensor: WARN
@@ -8,4 +7,5 @@ logger:
     ntc: WARN
     
 api:
-  password: ${api_password}
+  encryption:
+    key: ${api-key}
