--- a/common.yaml
+++ b/common.yaml
@@ -1,10 +1,11 @@
 ## Requires ${device_name}, ${api_password} and ${ota_password} to be set.
 
-# esphome:
-#   name: ${device_name}
+esphome:
+  name: ${device_name}
 
 ota:
-  password: ${ota_password}
+  - platform: esphome
+    password: ${ota_password}
 
 text_sensor:
   - platform: version
